--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vanilla App Template</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body>
+  <nav class="nav">
+    <a class="nav-logo" href="./index.html" aria-label="Site logo">
+      <svg class="nav-logo-icon" width="100" height="30">
+        <use href="{=$icon-path}"></use>
+      </svg>
+    </a>
+    <ul class="nav-list">
+      <li class="nav-item">
+        <a class="nav-link {=$highlight-act}" href="./1-gallery.html">Page 1</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {=$highlight-curr}" href="./2-form.html">Page 2</a>
+      </li>
+    </ul>
+  </nav>
+</body>
+
 </html>
